--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,5 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClassName = 'demo.App'
+    testClassName = 'demo.AppTest'
 }
