--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,9 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClassName = 'demo.App'
+}
+
+application {
+    // Define the main class for the application.
     testClassName = 'demo.AppTest'
 }
