--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,7 @@ application {
     // Define the main class for the application.
     mainClassName = 'demo.App'
 }
+
+task packageTests(type: Jar) {
+  from sourceSets.test.output
+}
