--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ plugins {
 jar {
     manifest {
         attributes 'Main-Class': 'demo.App'
+        attributes 'Main-Class': 'demo.CreateFiles'
     }
 }
 
@@ -37,4 +38,5 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClassName = 'demo.App'
+    mainClassName = 'demo.CreateFiles'
 }
