--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,7 @@ plugins {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'demo.App'
-        attributes 'Main-Class': 'demo.CreateFiles'
+        attributes 'Main-Class': 'demo.*'
     }
 }
 
