--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'demo/*.class'
+        attributes 'Main-Class': 'demo.App'
     }
 }
 
