--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'demo.App'
+        attributes 'Main-Class': 'demo.CreateFiles'
     }
 }
 
@@ -37,6 +37,6 @@ dependencies {
 application {
     // Define the main class for the application.
     //mainClassName = 'demo.App'
-    //mainClassName = 'demo.CreateFiles'
-    mainClassName = 'demo/*.class'
+    mainClassName = 'demo.CreateFiles'
+    //mainClassName = 'demo/*.class'
 }
