--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 application {
