--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     
-    testImplementation 'org.hamcrest:hamcrest:2.2'
+    //testImplementation 'org.hamcrest:hamcrest:2.2'
+    
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
 }
 
 application {
