--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     
     //testImplementation 'org.hamcrest:hamcrest:2.2'
     
-    testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    //testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'org.hamcrest:hamcrest-library:2.2'
 }
 
 application {
